# code-coral

./: .editorconfig  .gitignore  .pylintrc  ARCHITECTURE_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  README.md  README_NEW.md  STANDARDIZATION_REPORT.md  START_HERE.md  STYLE_GUIDE.md  TODO.md  api-key.txt  code_response.py  config_loader.py  debug_response.py  globals.py  load_prompt.py  main.py  normalize.bat  normalize.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
config/: description.md  general.yaml
docs/: architecture.md
prompts/: debugger.md  default_prompt.md  exception_addition.md  python_simple.md  suggestion_addition.md
src/code_coral/: __init__.py  code_response.py  config_loader.py  debug_response.py  globals.py  load_prompt.py
src/code_coral/utils/: __init__.py
syntax/: __init__.py  directory_operations.py
tests/: __init__.py  test_code_response.py  test_globals.py
